# studykb-mcp

./: .gitignore  README.md  pyproject.toml  spec.md
config/: llm_config.yaml  llm_config.yaml.template
kb/操作系统/: 26王道《操作系统》.md  26王道《操作系统》_index.md
kb/数据结构/: 26王道《数据结构》.md  26王道《数据结构》_index.md
progress/: 操作系统.json  数据结构.json
src/studykb_admin/: __init__.py  server.py
src/studykb_admin/api/: __init__.py  categories.py  convert.py  materials.py  progress.py  tasks.py  workspace.py
src/studykb_admin/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/studykb_admin/web/src/: App.vue  router.ts  style.css
src/studykb_admin/web/src/api/: fetch.ts  index.ts
src/studykb_admin/web/src/components/: DiffViewer.vue  FileHistoryPanel.vue  MarkdownViewer.vue  McpConfigBox.vue  Sidebar.vue  TaskProgressPanel.vue
src/studykb_admin/web/src/components/category/: CategorySidebar.vue  IndexTreeViewer.vue  MaterialsGrid.vue  MaterialsToolbar.vue  NewCategoryModal.vue  ProgressDetailPanel.vue  ProgressEntryList.vue  ProgressStatsHeader.vue  WorkspaceFileViewer.vue
src/studykb_admin/web/src/components/ui/: AppButton.vue  AppConfirmDialog.vue  AppEmptyState.vue  AppIcon.vue  AppModal.vue  AppSkeleton.vue  AppTabs.vue  AppToast.vue
src/studykb_admin/web/src/composables/: useCategoryWorkflow.ts  useConfirm.ts  useKeyboard.ts  useTaskBridge.ts  useToast.ts
src/studykb_admin/web/src/stores/: useCategoryStore.ts  useProgressStore.ts  useWorkspaceStore.ts
src/studykb_admin/web/src/utils/: file.ts
src/studykb_admin/web/src/views/: CategoryManagerView.vue  ProgressDetailView.vue  ProgressView.vue  SettingsView.vue
src/studykb_init/: __init__.py  __main__.py  cli.py  config.py
src/studykb_init/agents/: __init__.py  base.py  index_agent.py  progress_agent.py
src/studykb_init/operations/: __init__.py  category.py  import_file.py
src/studykb_init/services/: __init__.py  mineru_service.py  progress_service.py
src/studykb_mcp/: __init__.py  __main__.py  server.py
src/studykb_mcp/config/: settings.py
src/studykb_mcp/models/: __init__.py  kb.py  progress.py
src/studykb_mcp/services/: __init__.py  edit_strategy.py  history_service.py  kb_service.py  progress_service.py  review_service.py  workspace_service.py
src/studykb_mcp/tools/: __init__.py  grep.py  read_file.py  read_index.py  read_overview.py  read_progress.py  update_progress.py  workspace.py
src/studykb_mcp/utils/: __init__.py  datetime_utils.py  formatters.py
tests/: conftest.py
tests/test_integration/: __init__.py  test_mcp_server.py
tests/test_services/: __init__.py  test_kb_service.py  test_progress_service.py  test_review_service.py
tests/test_tools/: __init__.py  test_all_tools.py
