[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "studykb-mcp"
version = "0.1.0"
description = "MCP server for knowledge base management and study progress tracking"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "StudyKB Team" }
]
keywords = ["mcp", "knowledge-base", "study", "progress-tracking", "spaced-repetition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiofiles>=23.0",
    "python-dateutil>=2.8",
    "uvicorn>=0.30",
    "starlette>=0.38",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
init = [
    "rich>=13.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
]
admin = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]
all = [
    "studykb-mcp[dev,init,admin]",
]

[project.scripts]
studykb-mcp = "studykb_mcp.__main__:main"
studykb-init = "studykb_init.cli:main"
studykb-admin = "studykb_admin.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/studykb_mcp", "src/studykb_init", "src/studykb_admin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
